tree-sitter-jot/test/corpus/basic_sections
=====
Single Word Section
=====

=Section

---

(source_file
  (section_definition
    (section_name
      (identifier))))

=====
Multi Word Section
=====

="Section Name"

---

(source_file
  (section_definition
    (section_name
      (string))))
